resource/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
    io.kompose.network/hobbit-core: hobbit-core
  annotations:
    "cni.projectcalico.org/ipv4pools": "[\"hobbit-core\"]"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
        io.kompose.network/hobbit-core: hobbit-core
      annotations:
        "cni.projectcalico.org/ipv4pools": "[\"hobbit-core\"]"
    spec:
      securityContext:
            runAsUser: 0
      containers:
        - name: redis
          image: redis:4.0.7
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 0
          volumeMounts:
          - mountPath: /config/redis-db
            name: redis-server
      volumes:
        - name: redis-server
          configMap:
            name: redis-server
            items:
            - key: redis-config
              path: redis.conf
