resource/rabbit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit
  labels:
    app: rabbit
    io.kompose.network/hobbit: hobbit
    io.kompose.network/hobbit-core: hobbit-core
  annotations:
    "cni.projectcalico.org/ipv4pools": "[\"hobbit\",\"hobbit-core\"]"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbit
  template:
    metadata:
      labels:
        app: rabbit
        io.kompose.network/hobbit: hobbit
        io.kompose.network/hobbit-core: hobbit-core
      annotations:
        "cni.projectcalico.org/ipv4pools": "[\"hobbit\",\"hobbit-core\"]"
    spec:
      containers:
        - name: rabbit
          image: rabbitmq:management
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 15672
            - name: testing
              containerPort: 5672

---

apiVersion: v1
kind: Service
metadata:
  name: rabbit
  labels:
    app: rabbit
  annotations:
    "cni.projectcalico.org/ipv4pools": "[\"hobbit\",\"hobbit-core\"]"
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 15672
      protocol: TCP
    - name: testing
      port: 5672
      targetPort: 5672
      protocol: TCP
  selector:
    app: rabbit
