resource/hobbit-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: hobbit
spec:
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/hobbit: hobbit
  egress:
    - to:
        - podSelector:
            matchLabels:
              io.kompose.network/hobbit: hobbit
  podSelector:
    matchLabels:
      io.kompose.network/hobbit: hobbit
